# tuni_ml

./: .gitignore  LICENSE  README.md  app.py
notebooks/: cnn_balanced_data.ipynb  cnn_classifier_model.ipynb  cnn_model.ipynb  data_frame.ipynb  feature_df.ipynb  mlp_model.ipynb  random_forest.ipynb
notebooks/cell_7x7/: cnn_balanced_7x7.ipynb  cnn_cmax_cvar_tt.ipynb  mlp_cmax_cvar_tt.ipynb
notebooks/cnn/: cnn_balanced_data.ipynb  cnn_classifier_model.ipynb
notebooks/mlp/: mlp_balanced_data.ipynb  mlp_cvar_cmax.ipynb
notebooks/random_forest/: random_forest.ipynb  rf_cMax.ipynb  rf_cVariance.ipynb  rf_cmax_cvar.ipynb
processed_data/: example_df.csv
sci-ml/: pyproject.toml
sci-ml/sci_ml/cli/: main.py
sci-ml/sci_ml/data/: preview.py
src/: correlation.py  extract_cell_timetrace.py  extract_data.py  model_processing.py  processing_file.py
src/model/: balanced_cnn_classifier_dtt.pt  balanced_mlp_dtt.pt  cnn_classifier_dtt.pt  cnn_cmax_cvar_tt.pt  cnn_dtt.pt  mlp_cmax_cvar_dtt.pt  mlp_cmax_cvar_tt.pt  mlp_dtt.pt
src/visualization/: model_accuracy.ipynb
test/: test.py
